<resources>
    <string name="app_name">TemperatureDataWidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="done">Done</string>
    <string name="average_temp">Average:</string>
    <string name="current_temp">Current:</string>
    <string name="min_temp">Min:</string>
    <string name="max_temp">Max:</string>
    <string name="current_temp_default">Current: 00C</string>
    <string name="current_time_default">00:00</string>
    <string name="average_temp_default">Average: 00C</string>
    <string name="min_temp_default">Min: 00C</string>
    <string name="max_temp_default">Max: 00C</string>
    <string name="configure_button">Configure</string>
    <string name="data_source">Data Source</string>
    <string name="widget_reload_button">Reload</string>
    <string name="graph_title">Temperature for Last Hour</string>
    <string name="data_source_error_message">Could not load from data source.</string>
</resources>
