<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#aa4e5b5f">

    <GridLayout
        android:layout_width="wrap_content" android:layout_height="fill_parent"
        android:padding="0dp" android:background="#004e5b5f"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:rowCount="5"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:layout_columnWeight="1"
        android:columnCount="4"
        android:clickable="true"
        android:id="@+id/mainGrid_layout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_temp_default"
            android:id="@+id/averageTemp_text"
            android:layout_below="@+id/currentTemperature_text"
            android:layout_alignStart="@+id/currentTemperature_text"
            android:layout_margin="@dimen/widget_label_margin"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="@dimen/widget_small_font"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temp_default"
            android:id="@+id/maxTemp_text"
            android:layout_below="@+id/currentTemperature_text"
            android:layout_alignStart="@+id/currentTemperature_text"
            android:layout_margin="@dimen/widget_label_margin"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="@dimen/widget_small_font"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:text="@string/current_time_default"
            android:id="@+id/currentTime_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/widget_label_margin"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="3"
            android:textSize="55dp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-thin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temp_default"
            android:id="@+id/currentTemperature_text"
            android:layout_below="@+id/currentTemperature_text"
            android:layout_alignStart="@+id/currentTemperature_text"
            android:layout_margin="@dimen/widget_label_margin"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="@dimen/widget_small_font"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temp_default"
            android:id="@+id/minTemp_text"
            android:layout_below="@+id/currentTemperature_text"
            android:layout_alignStart="@+id/currentTemperature_text"
            android:layout_margin="@dimen/widget_label_margin"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="@dimen/widget_small_font"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temperatureView_graph"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="181dp"
            android:layout_height="34dp"
            android:text="@string/widget_reload_button"
            android:id="@+id/reload_button"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:padding="0dp"
            android:layout_margin="0dp" />

        <TextView android:id="@+id/appwidget_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" android:text="@string/appwidget_text"
            android:textStyle="bold|italic"
            android:layout_margin="0dp" android:contentDescription="@string/appwidget_text"
            android:layout_gravity="center_horizontal"
            android:layout_row="4"
            android:layout_column="0" />

    </GridLayout>
</RelativeLayout>